--- a/index.html
+++ b/index.html
@@ -15,32 +15,36 @@
             <div class="nav-logo">
                 <h2>ES1 Class</h2>
             </div>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#home" class="nav-link active" data-text="navHome">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#schedule" class="nav-link" data-text="navSchedule">Weekly Program</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#subjects" class="nav-link" data-text="navSubjects">Subjects</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#agenda" class="nav-link" data-text="navAgenda">Agenda</a>
-                </li>
-                <li class="nav-item">
-                    <a href="login.html" class="nav-link" data-text="navAdminLogin">Admin Login</a>
-                </li>
-            </ul>
-            <div class="nav-language">
-                <button id="languageToggle" class="btn btn-secondary" style="padding: 8px 16px; margin-left: 1rem;">
-                    <i class="fas fa-language"></i> <span id="currentLang">EN</span>
-                </button>
+            <div class="nav-center">
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="#home" class="nav-link active" data-text="navHome">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#schedule" class="nav-link" data-text="navSchedule">Weekly Program</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#subjects" class="nav-link" data-text="navSubjects">Subjects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#agenda" class="nav-link" data-text="navAgenda">Agenda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="login.html" class="nav-link" data-text="navAdminLogin">Admin Login</a>
+                    </li>
+                </ul>
             </div>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+            <div class="nav-right">
+                <div class="nav-language">
+                    <button id="languageToggle" class="btn btn-secondary" style="padding: 8px 16px;">
+                        <i class="fas fa-language"></i> <span id="currentLang">EN</span>
+                    </button>
+                </div>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </div>
         </div>
     </nav>
