--- a/subject-detail.html
+++ b/subject-detail.html
@@ -254,8 +254,9 @@
                                 const staticUrl = getApiUrl(`/uploads/${subjectId}/${image.filename}`);
                                 const rootUrl = getApiUrl(`/file/${image.filename}`);
                                 const directUrl = getApiUrl(`/uploads/${image.filename}`);
+                                const searchUrl = getApiUrl(`/search-file/${encodeURIComponent(image.originalname)}`);
                                 console.log('Loading image:', imageUrl);
-                                console.log('Alternative URLs:', { staticUrl, rootUrl, directUrl });
+                                console.log('Alternative URLs:', { staticUrl, rootUrl, directUrl, searchUrl });
                                 return `
                                 <div class="image-card" style="background: #f8f9fa; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
                                     <div style="width: 100%; height: 200px; background: #e9ecef; display: flex; align-items: center; justify-content: center; position: relative;">
@@ -264,7 +265,7 @@
                                              style="width: 100%; height: 100%; object-fit: cover; cursor: pointer; opacity: 0; transition: opacity 0.3s ease;"
                                              onclick="openImageFullscreen('${imageUrl}', '${image.originalname}')"
                                              onload="this.style.opacity = '1';"
-                                             onerror="tryAlternativeUrls(this, ['${staticUrl}', '${rootUrl}', '${directUrl}'], '${image.filename}');">
+                                             onerror="tryAlternativeUrls(this, ['${staticUrl}', '${rootUrl}', '${directUrl}', '${searchUrl}'], '${image.filename}');">
                                         <div style="display: none; flex-direction: column; align-items: center; justify-content: center; color: #666; text-align: center; position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
                                             <i class="fas fa-exclamation-triangle" style="font-size: 2rem; margin-bottom: 0.5rem;"></i>
                                             <p style="margin: 0; font-size: 0.9rem;">Image failed to load</p>
