--- a/subject-detail.html
+++ b/subject-detail.html
@@ -17,32 +17,36 @@
             <div class="nav-logo">
                 <h2>ES1 Class</h2>
             </div>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link" data-text="navHome">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="index.html#schedule" class="nav-link" data-text="navSchedule">Weekly Program</a>
-                </li>
-                <li class="nav-item">
-                    <a href="index.html#subjects" class="nav-link" data-text="navSubjects">Subjects</a>
-                </li>
-                <li class="nav-item">
-                    <a href="index.html#agenda" class="nav-link" data-text="navAgenda">Agenda</a>
-                </li>
-                <li class="nav-item">
-                    <a href="login.html" class="nav-link" data-text="navAdminLogin">Admin Login</a>
-                </li>
-            </ul>
-            <div class="nav-language">
-                <button id="languageToggle" class="btn btn-secondary" style="padding: 8px 16px; margin-left: 1rem;">
-                    <i class="fas fa-language"></i> <span id="currentLang">EN</span>
-                </button>
+            <div class="nav-center">
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link" data-text="navHome">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="schedule.html" class="nav-link" data-text="navSchedule">Weekly Program</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="subjects.html" class="nav-link active" data-text="navSubjects">Subjects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="agenda.html" class="nav-link" data-text="navAgenda">Agenda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="login.html" class="nav-link" data-text="navAdminLogin">Admin Login</a>
+                    </li>
+                </ul>
             </div>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+            <div class="nav-right">
+                <div class="nav-language">
+                    <button id="languageToggle" class="btn btn-secondary" style="padding: 8px 16px;">
+                        <i class="fas fa-language"></i> <span id="currentLang">EN</span>
+                    </button>
+                </div>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </div>
         </div>
     </nav>
