--- a/subjects.html
+++ b/subjects.html
@@ -85,7 +85,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p data-text="footerCopyright">&copy; 2024 ES1 Class Organization. All rights reserved.</p>
+            <p data-text="footerCopyright">MADE/POWERD BY MAHMOUD</p>
         </div>
     </footer>
 
