--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script src="languages.js"></script>
-    <script src="mobile-nav.js"></script>
+    <script src="mobile-nav-fix.js"></script>
 </head>
 <body>
     <!-- Navigation -->
