--- a/subject-detail.html
+++ b/subject-detail.html
@@ -112,7 +112,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>MADE/POWERD BY MAHMOUD</p>
+            <p>MADE/POWERED BY MAHMOUD</p>
         </div>
     </footer>
 
