--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p data-text="footerCopyright">MADE/POWERED BY MAHMOUD</p>
+            <p data-text="footerCopyright">MADE/POWERED BY MAHMOUD pierre on toppp</p>
         </div>
     </footer>
 
