--- a/schedule.html
+++ b/schedule.html
@@ -85,7 +85,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p data-text="footerCopyright">MADE/POWERED BY MAHMOUD</p>
+            <p data-text="footerCopyright">MADE/POWERED BY MAHMOUD/Pierre on toppp</p>
         </div>
     </footer>
 
